--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-jet (0.0.1) UNRELEASED; urgency=medium
+jet (0.1.0) unstable; urgency=medium
 
   * Initial release.
+  * Basic working gui
 
- -- John Thornton <jt@gnipsel.com>  Sat, 11 Nov 2023 10:53:14 -0600
+ -- John Thornton <dev@gnipsel.com>  Tue, 23 Jan 2024 11:33:02 -0600
