--- a/debian/install
+++ b/debian/install
@@ -1,5 +1,5 @@
 jet/src/jet usr/bin
-jet/src/jet.ui usr/lib/libjet
+jet/src/*.ui usr/lib/libjet
 jet/src/libjet/*.qss usr/lib/libjet
 
 jet/src/libjet/*.py usr/lib/python3/dist-packages/libjet
